[gd_scene load_steps=5 format=3 uid="uid://qyx5bqfrcv0s"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_dyotp"]
[ext_resource type="FontFile" uid="uid://cxeg4c7rwp2y3" path="res://assets/fonts/lowrez/lowrez.png" id="2_atoei"]

[sub_resource type="Animation" id="Animation_4k8d5"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckmbc"]
_data = {
"blink": SubResource("Animation_4k8d5")
}

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyotp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 84.0
offset_bottom = 12.0
color = Color(0, 0, 0, 1)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_right = 82.0
offset_bottom = 12.0
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 82.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("2_atoei")
text = "SCORE: 123456"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewHighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 23.0
offset_right = 83.0
offset_bottom = 33.0
text = "NEW HIGH SCORE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 36.0
offset_right = 82.0
offset_bottom = 48.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_atoei")
text = "PRESS SPACE
TO CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ckmbc")
}
